--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -8,7 +8,6 @@ aside {
 .sidebar-content {
   display: flex;
   flex-direction: column;
-  padding-left: 1.5rem;
   width: 11rem;
 }
 
